# \luma_db\lumadb_core\Cargo.toml
[package]
name = "lumadb_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "lumadb_core"
path = "src/lib.rs"

[dependencies]
lalrpop-util = "0.22.0" # Add lalrpop utility library for runtime support

[build-dependencies]
lalrpop = "0.22.0" # Add lalrpop as a build dependency